compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__match_bytes.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 439
expression: "\npub fn go(x) {\n  let assert <<1, y>> = x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  let assert <<1, y>> = x
}


----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function go(x) {
  let y;
  if (x.bitSize >= 8 && x.byteAt(0) === 1 && x.bitSize === 16) {
    y = x.byteAt(1);
  } else {
    throw makeError(
      "let_assert",
      FILEPATH,
      "my/mod",
      3,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x, start: 18, end: 41, pattern_start: 29, pattern_end: 37 }
    )
  }
  return x;
}
