compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__match_bytes_with_size.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 1462
expression: "\npub fn go(x) {\n  let assert <<f:bytes-2>> = <<1, 2>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  let assert <<f:bytes-2>> = <<1, 2>>
}


----- COMPILED JAVASCRIPT
import { makeError, toBitArray, bitArraySlice } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function go(x) {
  let $ = toBitArray([1, 2]);
  let f;
  if ($.bitSize === 16) {
    f = bitArraySlice($, 0, 16);
  } else {
    throw makeError(
      "let_assert",
      FILEPATH,
      "my/mod",
      3,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: $, start: 18, end: 53, pattern_start: 29, pattern_end: 42 }
    )
  }
  return $;
}
